--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="id" data-theme="light">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Budi Indra Ilham — Profil / CV</title>
-  <meta name="description" content="Profil, portofolio, dan CV singkat dalam satu halaman." />
-  <meta property="og:title" content="Budi Indra Ilham — Profil / CV" />
-  <meta property="og:description" content="Profil, portofolio, dan CV singkat dalam satu halaman." />
+  <title>Budi Indra Ilham — Profile / CV</title>
+  <meta name="description" content="A concise one-page profile, portfolio, and CV." />
+  <meta property="og:title" content="Budi Indra Ilham — Profile / CV" />
+  <meta property="og:description" content="A concise one-page profile, portfolio, and CV." />
   <meta property="og:type" content="website" />
   <style>
     /* ============ Design System ============ */
@@ -148,11 +148,11 @@
   <!-- NAVBAR -->
   <header class="nav">
     <div class="container nav-inner">
-      <div class="brand"><span class="dot"></span> <span>Profil / CV</span></div>
+      <div class="brand"><span class="dot"></span> <span>Profile / CV</span></div>
       <div class="nav-actions">
-        <button class="btn" id="themeBtn" aria-label="Ganti tema">🌓 <span class="hide-sm">Tema</span></button>
-        <button class="btn print" onclick="window.print()" aria-label="Cetak / Simpan PDF">🖨️ <span class="hide-sm">Cetak PDF</span></button>
-        <a class="btn primary" href="#kontak">✉️ <span class="hide-sm">Kontak</span></a>
+        <button class="btn" id="themeBtn" aria-label="Toggle theme">🌓 <span class="hide-sm">Theme</span></button>
+        <button class="btn print" onclick="window.print()" aria-label="Print / Save PDF">🖨️ <span class="hide-sm">Print PDF</span></button>
+        <a class="btn primary" href="#contact">✉️ <span class="hide-sm">Contact</span></a>
       </div>
     </div>
   </header>
@@ -166,12 +166,12 @@
           <div>
             <h1>Budi Indra Ilham</h1>
             <div class="title">Digital Support · Jakarta, Indonesia</div>
-            <div class="pill" title="Ketersediaan">
-              <span>✔️ Tersedia untuk freelance/kontrak</span>
+            <div class="pill" title="Availability">
+              <span>✔️ Available for freelance/contract</span>
             </div>
           </div>
         </div>
-        <p>Digital Support & Web Designer berfokus pada EDM: blasting, layout HTML email, editing gambar, dan pembuatan aset digital kampanye. Berpengalaman di HSBC & kolaborasi lintas tim; memastikan rendering konsisten (Outlook, Gmail, mobile) dan eksekusi tepat waktu.</p>
+        <p>Digital Support & Web Designer focused on EDM: blasting, HTML email layout, image editing, and creating digital assets for campaigns. Experienced at HSBC and cross‑team collaboration; ensures consistent rendering (Outlook, Gmail, mobile) and on‑time execution.</p>
         <div class="hero-actions">
           <button class="btn" id="copyEmail">📋 Salin Email</button>
           <a class="btn" href="mailto:emailmu@domain.com">✉️ Email</a>
@@ -181,14 +181,14 @@
         </div>
       </div>
       <div class="card about">
-        <h2 class="sec-title"><span class="bar"></span>Tentang Saya</h2>
-        <p>Digital Support dengan pengalaman menjalankan kampanye email (EDM) end‑to‑end: segmentasi, QA HTML/CSS/JS, kompatibilitas dark mode, dan pemantauan deliverability. Mahir Web Design serta Adobe Photoshop & Illustrator. Terbiasa di tim digital yang dinamis, fokus pada efisiensi proses dan hasil yang terukur.</p>
+        <h2 class="sec-title"><span class="bar"></span>About</h2>
+        <p>Experienced in executing EDM blasts, with strong skills in Web Design (HTML, CSS, JS) and proficiency in Adobe Photoshop and Illustrator. Thrives in challenging environments, always eager to learn and grow while meeting customer needs and company goals. Dedicated, motivated, and a fast learner.</p>
       </div>
     </section>
 
     <!-- SKILLS -->
     <section class="card">
-      <h2 class="sec-title"><span class="bar"></span>Keahlian Utama</h2>
+      <h2 class="sec-title"><span class="bar"></span>Skills</h2>
       <div class="skills" id="skills">
         <span class="badge">HTML5</span>
         <span class="badge">Email HTML</span>
@@ -207,27 +207,27 @@
 
     <!-- EXPERIENCE -->
     <section class="card">
-      <h2 class="sec-title"><span class="bar"></span>Pengalaman</h2>
+      <h2 class="sec-title"><span class="bar"></span>Experience</h2>
       <div class="timeline">
         <div class="item">
-          <div class="when">Des 2024 – Sekarang</div>
+          <div class="when">Dec 2024 – Present</div>
           <div>
-            <div class="where">HSBC — Digital Support (Kontrak) · Jakarta · Hybrid</div>
-            <p>Responsible for EDM blasting, email layouting, image editing, dan membantu tugas desain digital untuk email. Tools: Adobe Photoshop, HTML5, dll.</p>
+            <div class="where">HSBC — Digital Support (Contract) · Jakarta · Hybrid</div>
+            <p>Responsible for EDM blasting, email layouting, image editing, and supporting digital design tasks for emails. Tools: Adobe Photoshop, HTML5, etc.</p>
           </div>
         </div>
         <div class="item">
           <div class="when">Jan 2018 – Jan 2020</div>
           <div>
-            <div class="where">HSBC Retail Banking and Wealth Management — Web Designer (Kontrak) · Greater Jakarta · On‑site</div>
-            <p>Digital Team Marketing: mengelola & membuat email blast harian; desain & konversi offer menjadi HTML email; membuat aset sosial (WA/Instagram/banner/sign‑off/PIB/ATM); retouch gambar; menjalankan SMS blast.</p>
+            <div class="where">HSBC Retail Banking and Wealth Management — Web Designer (Contract) · Greater Jakarta · On‑site</div>
+            <p>Digital Team Marketing: managed daily email blasts; designed and converted offers into HTML for emails; produced social media/WhatsApp/Instagram/sign‑off/PIB/ATM banners; image manipulation & retouching; executed SMS blasts.</p>
           </div>
         </div>
         <div class="item">
-          <div class="when">Jan 2019 – Okt 2019</div>
+          <div class="when">Jan 2019 – Oct 2019</div>
           <div>
-            <div class="where">INDEGLAY — Graphic Designer (Paruh Waktu) · Jakarta Metropolitan Area</div>
-            <p>Mengembangkan konsep desain untuk sosial/web/email; membuat banner & ikon; retouch gambar; kolaborasi & presentasi konsep ke partner; mengikuti tren desain; memastikan pengiriman tepat waktu.</p>
+            <div class="where">INDEGLAY — Graphic Designer (Part‑time) · Jakarta Metropolitan Area</div>
+            <p>Developed design concepts for social/web/email; created banners & icons; retouched images; collaborated and presented concepts to partners; stayed current with design trends; ensured on‑time delivery.</p>
           </div>
         </div>
       </div>
@@ -236,11 +236,11 @@
     <!-- PROJECTS -->
     <section class="card" id="proyek">
       <div class="sec-header" style="display:flex; align-items:center; justify-content:space-between; gap:12px;">
-        <h2 class="sec-title" style="margin:0"><span class="bar"></span>Proyek Terpilih</h2>
-        <div class="filters" role="tablist" aria-label="Filter proyek">
-          <button class="filter active" data-filter="all">Semua</button>
+        <h2 class="sec-title" style="margin:0"><span class="bar"></span>Selected Projects</h2>
+        <div class="filters" role="tablist" aria-label="Filter projects">
+          <button class="filter active" data-filter="all">All</button>
           <button class="filter" data-filter="web">Web</button>
-          <button class="filter" data-filter="design">Desain</button>
+          <button class="filter" data-filter="design">Design</button>
           <button class="filter" data-filter="data">Data</button>
         </div>
       </div>
@@ -249,7 +249,7 @@
           <div class="thumb">Thumbnail</div>
           <div class="content">
             <h3>Landing Page Fintech</h3>
-            <p>Meningkatkan konversi sign‑up 22% melalui optimasi UX & performa.</p>
+            <p>Increased sign‑ups by 22% via UX & performance optimization.</p>
             <div class="tags"><span class="badge">Next.js</span><span class="badge">Vercel</span></div>
           </div>
         </article>
@@ -257,7 +257,7 @@
           <div class="thumb">Thumbnail</div>
           <div class="content">
             <h3>Design System v2</h3>
-            <p>Komponen konsisten untuk web & EDM; mengurangi rework 35%.</p>
+            <p>Consistent components for web & EDM; reduced rework by 35%.</p>
             <div class="tags"><span class="badge">Figma</span><span class="badge">Design Token</span></div>
           </div>
         </article>
@@ -265,7 +265,7 @@
           <div class="thumb">Thumbnail</div>
           <div class="content">
             <h3>Dashboard Email Campaign</h3>
-            <p>Tracking open/click; otomatisasi laporan mingguan.
+            <p>Open/click tracking; automated weekly reporting.
             </p>
             <div class="tags"><span class="badge">SQL</span><span class="badge">Power BI</span></div>
           </div>
@@ -275,31 +275,31 @@
 
     <!-- EDUCATION & CERTS -->
     <section class="card">
-      <h2 class="sec-title"><span class="bar"></span>Pendidikan & Sertifikasi</h2>
+      <h2 class="sec-title"><span class="bar"></span>Education & Certifications</h2>
       <ul style="margin:0; padding-left: 18px;">
-        <li><strong>Universitas X</strong> — S1 Sistem Informasi (2017–2021)</li>
+        <li><strong>University X</strong> — B.Sc. Information Systems (2017–2021)</li>
         <li><strong>Google UX Certificate</strong> — 2022</li>
       </ul>
     </section>
 
     <!-- CONTACT -->
-    <section class="card" id="kontak">
-      <h2 class="sec-title"><span class="bar"></span>Kontak</h2>
+    <section class="card" id="contact">
+      <h2 class="sec-title"><span class="bar"></span>Contact</h2>
       <div class="contact-grid">
         <div>
-          <label for="nama">Nama</label>
-          <input class="input" id="nama" placeholder="Tulis nama kamu" />
+          <label for="nama">Name</label>
+          <input class="input" id="nama" placeholder="Your name" />
         </div>
         <div>
           <label for="email">Email</label>
           <input class="input" id="email" placeholder="email@domain.com" />
         </div>
         <div style="grid-column: 1/-1;">
-          <label for="pesan">Pesan</label>
-          <textarea class="input" id="pesan" placeholder="Tulis pesan di sini..."></textarea>
+          <label for="pesan">Message</label>
+          <textarea class="input" id="pesan" placeholder="Type your message..."></textarea>
         </div>
         <div style="grid-column: 1/-1; display:flex; gap:10px;">
-          <button class="btn primary" id="kirimBtn">Kirim via Email</button>
+          <button class="btn primary" id="kirimBtn">Send via Email</button>
           <button class="btn" type="reset" id="resetBtn">Reset</button>
         </div>
       </div>
@@ -307,7 +307,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> Budi Indra Ilham. Dibuat dengan HTML/CSS/JS vanilla. 
+    © <span id="year"></span> Budi Indra Ilham. Built with vanilla HTML/CSS/JS. 
   </footer>
 
   <script>
@@ -332,9 +332,9 @@
       try {
         await navigator.clipboard.writeText(EMAIL);
         const el = e.currentTarget; const txt = el.textContent;
-        el.textContent = '✅ Email disalin';
+        el.textContent = '✅ Email copied';
         setTimeout(()=> el.textContent = txt, 1400);
-      } catch(err){ alert('Gagal menyalin email'); }
+      } catch(err){ alert('Failed to copy email'); }
     });
 
     // ===== Form: kirim via email =====
@@ -342,8 +342,13 @@
       const nama = document.getElementById('nama').value.trim();
       const email = document.getElementById('email').value.trim();
       const pesan = document.getElementById('pesan').value.trim();
-      const body = encodeURIComponent(`Halo,\n\nNama: ${nama}\nEmail: ${email}\n\n${pesan}`);
-      window.location.href = `mailto:${EMAIL}?subject=Kontak%20dari%20Website&body=${body}`;
+      const body = encodeURIComponent(`Hello,
+
+Name: ${nama}
+Email: ${email}
+
+${pesan}`);
+      window.location.href = `mailto:${EMAIL}?subject=Contact%20from%20Website&body=${body}`;
     });
     document.getElementById('resetBtn').addEventListener('click', () => {
       document.getElementById('nama').value = '';
