--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     @media (max-width: 1000px){ .grid{ grid-template-columns: repeat(2, minmax(0,1fr)); } }
     @media (max-width: 640px){ .grid{ grid-template-columns: 1fr; } }
 
-    .project { $1 cursor:pointer; }
+    .project { cursor:pointer; }
     .project:hover{ transform: translateY(-2px); transition: transform .15s ease; }
     .project .thumb { position:relative; aspect-ratio:9/9; background:var(--muted); border-bottom:1px solid var(--border); overflow:hidden; cursor:pointer; }
     .project .thumb .thumb-frame{ position:absolute; inset:0; width:100%; height:100%; border:0; pointer-events:none; }
@@ -123,7 +123,7 @@
 
     /*/* Slider Arrows overlay di kiri/kanan grid */
     .slider-arrow {
-      position:absolute; top:50%; transform: translateY(-50%);
+      position:absolute; top:30%; transform: translateY(-50%);
       display:inline-flex; align-items:center; justify-content:center;
       width:44px; height:44px; border-radius:999px; border:1px solid var(--border);
       background: color-mix(in oklab, var(--card) 90%, transparent);
@@ -285,7 +285,9 @@
             </div>
             <div class="content">
               <h3>Project Beta</h3>
-              <p>EDM helper tools & small utilities.</p>
+              <p>EDM helper tools & small utilities<br>
+                for helping my works
+              </p>
               <div class="tags"><span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JS</span><span class="badge">GitHub Pages</span></div>
             </div>
           </article>
