--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <section class="hero">
       <div class="card">
         <div class="headline">
-          <img class="avatar" src="data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='240' height='240'><defs><linearGradient id='g' x1='0' y1='0' x2='1' y2='1'><stop stop-color='%232563eb' offset='0%'/><stop stop-color='%230ea5e9' offset='100%'/></linearGradient></defs><rect width='100%' height='100%' fill='url(%23g)'/><text x='50%' y='52%' dominant-baseline='middle' text-anchor='middle' font-family='Segoe UI, Arial' font-size='72' fill='white'>BI</text></svg>" alt="Avatar" />
+          <img class="avatar" src="data:budi.jpg;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='240' height='240'><defs><linearGradient id='g' x1='0' y1='0' x2='1' y2='1'><stop stop-color='%232563eb' offset='0%'/><stop stop-color='%230ea5e9' offset='100%'/></linearGradient></defs><rect width='100%' height='100%' fill='url(%23g)'/><text x='50%' y='52%' dominant-baseline='middle' text-anchor='middle' font-family='Segoe UI, Arial' font-size='72' fill='white'>BI</text></svg>" alt="Avatar" />
           <div>
             <h1>Budi Indra Ilham</h1>
             <div class="title">Digital Support · Jakarta, Indonesia</div>
