--- a/index.html
+++ b/index.html
@@ -252,12 +252,17 @@
 
     <!-- EDUCATION & CERTS -->
     <section class="card">
-      <h2 class="sec-title"><span class="bar"></span>Education & Certifications</h2>
-      <ul class="list">
-        <li><strong>University X</strong> — B.Sc. Information Systems (2017–2021)</li>
-        <li><strong>Google UX Certificate</strong> — 2022</li>
-      </ul>
-    </section>
+  <h2 class="sec-title"><span class="bar"></span>Education & Certifications</h2>
+  <ul class="list">
+    <li>
+      <strong>Universitas Budi Luhur</strong> — 
+      Bachelor's degree, Information Technology 
+      <span class="xp-dates">(Sep 2013 – Sep 2017)</span>
+    </li><br>
+    <li><strong>Google UX Certificate</strong> — 2022</li>
+  </ul>
+</section>
+
 
     <!-- CONTACT -->
     <section class="card" id="contact">
@@ -283,7 +288,7 @@
     </section>
   </main>
 
-  <footer>© <span id="year"></span> Budi Indra Ilham. Built with vanilla HTML/CSS/JS.</footer>
+  <footer>© <span id="year"></span> craft by <a href="https://instagram.com/budife.psd" target="_blank" rel="noopener">@budife.psd</a></footer>
 
   <!-- Live Preview Modal -->
   <div id="previewModal" aria-hidden="true">
